update description of Hood's work

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -72,11 +72,11 @@ These spilttings and these flatness isomorphisms---and the absence of a known sp
 Even if \(KO\) and \(\widehat L_2 \TMF\) appear un-geometric, they appear to belong to the beginning of a recognizable pattern: \(KO^\wedge_p = E_1^{hC_2}\) and \(\widehat L_2 \tmf = E_2^{hM}\) both arise as fixed point spectra for maximal finite subgroups of their respective stabilizer groups.  One might therefore analogously define \textit{higher real \(K\)--theories} by the formula \(EO_d = E_d^{hM}\) for a maximal finite subgroup \(M \le \Aut \Gamma_d\).  These spectra are interesting in their own right, but in light of the discussion above one might furthermore search for a connection between them and higher bordism spectra.  An extremely interesting result of Hovey~\cite[Proposition 2.3.4]{HoveyVnEltsOfRings} says that this cannot be made to work out as stated: for \(p > 3\) and \(k\) arbitrary, there is no map of ring spectra \[MO[k, \infty) \to EO_{p-1} = E_{p-1}^{hC_p}.\]  The meat of this theorem comes from two competing forces:
 \begin{itemize}
     \item The homotopy of \(EO_{p-1}\) is known by computations of Hopkins and Miller to contain \(\alpha_1\).  Since the homotopy of \(MO[k, \infty)\) agrees with that of the sphere below \(k\) and destroys the \(\alpha\) elements above \(k\), this forces the value of \(k\) to be large enough to accommodate the elements present in \(\pi_* EO_{p-1}\).
-    \item Because \(EO_{p-1}\) is local, any orientation of it factors through \(\widehat L_{p-1} MO[k, \infty)\).  The Ravenel--Wilson acyclicity results for Eilenberg--Mac Lane spaces show that the natural map \(\widehat L_{p-1} MO[k, \infty) \to \widehat L_{p-1} MO[p, \infty)\) is an equivalence for any \(k \ge p\).  It follows that such an \(MO[k, \infty)\)--orientation of \(EO_{p-1}\) is equivalent data to an \(MO[p, \infty)\)--orientation.
+    \item Because \(EO_{p-1}\) is local, any orientation of it factors through \(\widehat L_{p-1} MO[k, \infty)\).  The Ravenel--Wilson acyclicity results for Eilenberg--Mac Lane spaces show that the natural map \(\widehat L_{p-1} MO[k, \infty) \to \widehat L_{p-1} MO[p, \infty)\) is an equivalence for any \(4k \ge p+2\).  It follows that such an \(MO[k, \infty)\)--orientation of \(EO_{p-1}\) is equivalent data to an \(MO[p, \infty)\)--orientation.
 \end{itemize}
 For \(p > 3\), these bounds pass through each other and there is no satisfactory value of \(k\).  At the same time, because of the tight connection between stable homotopy theory and the Morava \(E\)--theories, this might be read as a failure of the connective bordism spectra \(MO[k, \infty)\) more than a failure of higher real \(K\)--theories.  It is interesting to try to imagine a continuation of the sequence \(MO\), \(MSO\), \(M\Spin\), \(M\String\) which does not suffer from Hovey's negative result.
 
-There is a slightly different continuation of the sequence \(MU\), \(MSU\), \(MU[6, \infty)\) that has recently borne fruit.  In the notation of \Cref{WilsonSpaces}, the underlying spaces \(BU\), \(BSU\), and \(BU[6, \infty)\) can be identified with the Wilson spaces \(Y_2\), \(Y_4\), and \(Y_6\) at any prime.  Fixing a prime \(p\), Hood Chatham has observed that although \(MU[k, \infty)\) also suffers from Hovey's negative result, the Thom spectrum associated to the Adams summand \(Y_{2p} = \OS{BP\<1\>}{2p} \le \OS{kU}{2p}\) does not, and indeed \(EO_{p-1}\) is \(MY_{2p}\)--oriented.  The relation of this result to the program outlined above remains unexplored.\footnote{Some footholds for the \emph{algebraic} geometry of the large \(k\) case extending \Cref{AHSCalculationOfC3} have also been worked out~\cite{HLP}.  There is mild evidence that there is an isomorphism $\sheaf O_{C^k(\G_a; \Gm)} \otimes \Z_{(2)} \to H\Z_{(2)}{}_* BU[2k, \infty)$, corresponding to some of the input required by \Cref{Pi3ForCplxOrientableE}.  However, this algebra contains \(2\)--torsion (whose base-change to \(\F_2\) appears to account for at least \emph{some} the complaints raised in \cite[Remark 8.1]{HLP}), which stymies the rest of that proof and hence blocks the analysis for a general complex-orientable cohomology theory.  Additionally, the known results require \(p = 2\), which means that any tether between this approach and Wilson spaces will involve higher-order truncated Brown--Peterson spectra, which directly connects neither with Chatham's result nor with \(BU[2k, \infty)\).  The ultimate fate of the schematic interpretation of connective complex orientations is presently unknown.}
+There is a slightly different continuation of the sequence \(MU\), \(MSU\), \(MU[6, \infty)\) that has recently borne fruit.  In the notation of \Cref{WilsonSpaces}, the underlying spaces \(BU\), \(BSU\), and \(BU[6, \infty)\) can be identified with the Wilson spaces \(Y_2\), \(Y_4\), and \(Y_6\) at any prime.  Fixing a prime \(p\), Hood Chatham has observed that although \(MU[k, \infty)\) also suffers from Hovey's negative result, the Thom spectrum associated to the restriction \(W_{2p} = \OS{BP\<1\>}{2p} \le \OS{kU}{2p}\) does not, and indeed \(EO_{p-1}\) is \(MW_{2p}\)--oriented.  The relation of this result to the program outlined above remains unexplored, as do some further alternatives: the principal Adams summands $W_{4p-4}$ and the full infinite loopspaces $\OS{MU}{2p}$.\footnote{Some footholds for the \emph{algebraic} geometry of the large \(k\) case extending \Cref{AHSCalculationOfC3} have also been worked out~\cite{HLP}.  There is mild evidence that there is an isomorphism $\sheaf O_{C^k(\G_a; \Gm)} \otimes \Z_{(2)} \to H\Z_{(2)}{}_* BU[2k, \infty)$, corresponding to some of the input required by \Cref{Pi3ForCplxOrientableE}.  However, this algebra contains \(2\)--torsion (whose base-change to \(\F_2\) appears to account for at least \emph{some} the complaints raised in \cite[Remark 8.1]{HLP}), which stymies the rest of that proof and hence blocks the analysis for a general complex-orientable cohomology theory.  Additionally, the known results require \(p = 2\), which means that any tether between this approach and Wilson spaces will involve higher-order truncated Brown--Peterson spectra, which directly connects neither with Chatham's result nor with \(BU[2k, \infty)\).  The ultimate fate of the schematic interpretation of connective complex orientations is presently unknown.}
 
 
 
