kill pi_* interpolation, keep only moment interpolation

--- a/powerops.tex
+++ b/powerops.tex
@@ -1224,14 +1224,7 @@ execute at end picture={
 
 We are now in a position to compute the action of \(C\) on a homotopy class in \(\pi_{4k} b\mathit{string}\) using the same steps as before: push it forward to a class in \(\widehat L_1 b\mathit{string}\), pull that back along \(1 - \psi^c\) by dividing by \((1 - c^{2k})\), apply the map \(B''\) to select a class \(b''_{4k} \in \pi_{4k} \widehat L_1 \tmf\), and finally pass to the rational part of the ring \(\Q \otimes \pi_* \widehat L_1 \tmf\) of \(p\)--adic modular forms.  Altogether, this yields an equality \[(1 - c^{2k})^{-1} b''_{4k} = \ell_1(t_{4k}),\] where \(b''_{4k}\) is the effect on homotopy of the map \(B''\co KO_p \to \widehat L_1 \tmf\).  In order to compute the effect of the \(K(1)\)--local logarithm, we must draw upon results from \Cref{ConstructionOfTMFSection}: we learned there that the \(\psi^p\)--operation on \(\widehat L_1 \tmf\) acts on a \(p\)--adic modular form \(t_{2k}(q) = \sum_{n=0}^\infty a_n q^n \in \pi_{2k} \widehat L_1 \tmf\) of weight \(k\) by \[\psi^p(t_{2k})(q) = p^k V(t_{2k})(q) := p^k \sum_{n=0}^\infty a_n q^{pn}.\]  Coupling this to \Cref{RezkLogFormula} gives \(\ell_1(1 + t_{2k}) = (1 - p^{k-1}V)t_{2k}\), i.e., \[b''_{4k} = (1 - c^{2k}) (1 - p^{2k-1}V) t_{4k}.\]  Our analysis of \(KO\)--operations extends~\cite[Proposition 11.4.iv]{AHR} to cover the case of maps \(KO \to \widehat L_1 \tmf\), from which we learn that the \(p\)--adic modular forms \(b''_{4k}\) must satisfy an analogue of the Kummer congruences from \Cref{KOKummerLemma}: given \(h = \sum_{k=0}^\infty a_k z^k \in \Q_p[z]\) a polynomial satisfying \(h(\Z_p^\times) \subseteq \Z_p\), we must always have \(\sum_{k=0}^\infty a_{2k} b''_{4k} \in \Z_p\ps{q}\).  Conversely, given such a sequence we may construct a map \(B''\) and maps \(B\) and \(C\) commuting with it.
 
-In order for the map \(B\) constructed in this way to commute with the rest of the diagram (i.e., in order for it to belong to a filler \(A\)), we must impose a further condition.  The most definitionally straightforward such condition is compatibility with the Miller invariant, as we used in the analysis of \(KO\)---but our usage there required being able to \emph{compute} this invariant, and to accomplish that we relied on the presence of an \(A_\infty\) orientation.  As \(\tmf\) does not have a preexisting structured orientation, this approach is insuitable for us now.\footnote{The approach presented here is not the only alternative.  A second, along the lines of Miller's original calculation~\cite{MillerBernoulliNos}, takes as input a calculation of a certain \(S^1\)--transfer.  Supposedly, there is even a third alternative that applies the Bousfield--Kuhn functor to an \(H_\infty\)--orientation to determine the Miller invariant, but I am unable to reconstruct this argument.}  Instead, we follow the effect of \(\widehat L_1 \gl_1 \eta_{\tmf}\) through the back face: naturality of the logarithm shows that the composite \(\widehat L_1 \S \to \widehat L_1 \tmf\) passing through \(B''\) must be equivalent to \(\widehat L_1 \eta_{\widehat L_1 \tmf}\), i.e., \(\rho(c) \cdot b''_0 = 1\) for \(\rho(c)\co \widehat L_1 \S \to \widehat L_1 C j\).  Critically, the class \(\rho(c)\) has no dependence on \(\widehat L_1 \tmf\): the same class satisfying the same condition appears when studying \(KO\)--orientations, and so we may calculate \(\rho(c)\) using the moments associated to the orientation \(M\Spin \to KO\), as in
-\begin{align*}
-b_0 & = \lim_{r \to \infty} b_{(p-1) p^r} \tag{interpolation of homotopy groups} \\
-& = \int_{\Z_p^\times} x^{(p-1) p^r} d\mu_c \tag{interpretation as moments} \\
-& = \int_{\Z_p^\times} d\mu_c \tag{interpolation of moments} \\
-& = \frac{1}{2p} \log c^{p-1}, \tag{\Cref{MazurMeasuresThm}}
-\end{align*}
-from which it follows that \(B\) belongs to a filler \(A\) if and only if \[\lim_{r \to \infty} b''_{(p-1)p^r} = \frac{1}{2p} \log c^{p-1}.\]
+In order for the map \(B\) constructed in this way to commute with the rest of the diagram (i.e., in order for it to belong to a filler \(A\)), we must impose a further condition.  The most definitionally straightforward such condition is compatibility with the Miller invariant, as we used in the analysis of \(KO\)---but our usage there required being able to \emph{compute} this invariant, and to accomplish that we relied on the presence of an \(A_\infty\) orientation.  As \(\tmf\) does not have a preexisting structured orientation, this approach is insuitable for us now.\footnote{The approach presented here is not the only alternative.  A second, along the lines of Miller's original calculation~\cite{MillerBernoulliNos}, takes as input a calculation of a certain \(S^1\)--transfer.  Supposedly, there is even a third alternative that applies the Bousfield--Kuhn functor to an \(H_\infty\)--orientation to determine the Miller invariant, but I am unable to reconstruct this argument.}  Instead, we follow the effect of \(\widehat L_1 \gl_1 \eta_{\tmf}\) through the back face: naturality of the logarithm shows that the composite \(\widehat L_1 \S \to \widehat L_1 \tmf\) passing through \(B''\) must be equivalent to \(\widehat L_1 \eta_{\widehat L_1 \tmf}\), i.e., \(\rho(c) \cdot b''_0 = 1\) for \(\rho(c)\co \widehat L_1 \S \to \widehat L_1 C j\).  Critically, the class \(\rho(c)\) has no dependence on \(\widehat L_1 \tmf\): the same class satisfying the same condition appears when studying \(KO\)--orientations, and so we may calculate \(\rho(c)\) using the moments associated to the orientation \(M\Spin \to KO\) and \Cref{MazurMeasuresThm}, as in \[b_0 = \int_{\Z_p^\times} d\mu_c = \frac{1}{2p} \log c^{p-1},\] from which it follows that \(B\) belongs to a filler \(A\) if and only if \[\lim_{r \to \infty} b''_{(p-1)p^r} = \frac{1}{2p} \log c^{p-1}.\]
 
 After completing an identical analysis of \(\mathbf A(\widehat L_1 \widehat L_2 \gl_1 \tmf)\), what remains is to study the fiber in the sequence \[\mathbf A(\gl_1 \tmf) \to \mathbf A(\widehat L_1 \gl_1 \tmf) \to \mathbf A(\widehat L_1 \widehat L_2 \gl_1 \tmf).\]  To calculate the effect of this second map on a putative sequence of homotopy elements \(t_{4k}\), we entwine the logarithm:
 \begin{center}
