cite B-M for a pleasant approach to the adem rel'ns

--- a/main.bib
+++ b/main.bib
@@ -965,6 +965,23 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.2140/agt.2007.7.529},
 }
 
+@article {BullettMacdonald,
+    AUTHOR = {Bullett, S. R. and Macdonald, I. G.},
+     TITLE = {On the {A}dem relations},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {21},
+      YEAR = {1982},
+    NUMBER = {3},
+     PAGES = {329--332},
+      ISSN = {0040-9383},
+   MRCLASS = {55S05 (55S10)},
+  MRNUMBER = {649764},
+MRREVIEWER = {Frederick Cohen},
+       DOI = {10.1016/0040-9383(82)90015-5},
+       URL = {https://doi.org/10.1016/0040-9383(82)90015-5},
+}
+
 @article {ButowiezTurner,
     AUTHOR = {Butowiez, Jean-Yves and Turner, Paul},
      TITLE = {Unstable multiplicative cohomology operations},
