--- a/quillen.tex
+++ b/quillen.tex
@@ -825,7 +825,7 @@ The picture Quillen paints of all this is considerably different from ours.  He 
 \end{remark}
 
 \begin{example}[{\cite{SteenrodCyclic,SteenrodSymmetric}}]
-The chain model for \(\HFtwo\)--homology is actually also rigid enough to define power operations, and somewhat curiously these operations automatically turn out to be additive, without passing to the Tate construction.  This means that they are recognizable in terms of classical Steenrod operations: the \(C_2\)--construction \[\{\Susp^n \Susp^\infty_+ X \xrightarrow{f} \HFtwo\} \xrightarrow{P^{C_2}} \{\Susp^{2n} \Susp^\infty_+ X \sm \Susp^\infty_+ BC_2 \xrightarrow{P^{C_2}(f)} \HFtwo\}\] gives a class in \(\HFtwo^{2n-*}(X) \otimes \HFtwo^*(\RP^\infty)\), which decomposes as \[P^{C_2}(f) = \sum_{j=0}^{2n} \Sq^{2n-j}(f) \otimes x^j.\]  The Adem relations~\cite{Adem} can be extracted by studying the wreath product \(\Sigma_2 \wr \Sigma_2\) and the compositional identity for power operations~\cite{BullettMacdonald}.
+The chain model for \(\HFtwo\)--homology is rich enough to define an $H_\infty$--ring structure and hence power operations.  Because the Euler class $x^2 \in MO^2 \RP^\infty$ is not a zero divisor, these operations are automatically additive, even before passing to the Tate construction.  In turn, this means that they are recognizable in terms of classical Steenrod operations: the \(C_2\)--construction \[\{\Susp^n \Susp^\infty_+ X \xrightarrow{f} \HFtwo\} \xrightarrow{P^{C_2}} \{\Susp^{2n} \Susp^\infty_+ X \sm \Susp^\infty_+ BC_2 \xrightarrow{P^{C_2}(f)} \HFtwo\}\] gives a class in \(\HFtwo^{2n-*}(X) \otimes \HFtwo^*(\RP^\infty)\), which decomposes as \[P^{C_2}(f) = \sum_{j=0}^{2n} \Sq^{2n-j}(f) \otimes x^j.\]  The Adem relations~\cite{Adem} can be extracted by studying the wreath product \(\Sigma_2 \wr \Sigma_2\) and the compositional identity for power operations~\cite{BullettMacdonald}.
 \end{example}
 
 \begin{remark}[{\cite[Theorems III.4.1-3, Remark III.4.4]{BMMS}}]\label{HinftyRingsModp}
