--- a/main.bib
+++ b/main.bib
@@ -4216,6 +4216,22 @@ MRREVIEWER = {H. Hogreve},
   publisher={World Scientific}
 }
 
+@article {Thom,
+    AUTHOR = {Thom, Ren\'{e}},
+     TITLE = {Quelques propri\'{e}t\'{e}s globales des vari\'{e}t\'{e}s diff\'{e}rentiables},
+   JOURNAL = {Comment. Math. Helv.},
+  FJOURNAL = {Commentarii Mathematici Helvetici},
+    VOLUME = {28},
+      YEAR = {1954},
+     PAGES = {17--86},
+      ISSN = {0010-2571},
+   MRCLASS = {56.0X},
+  MRNUMBER = {61823},
+MRREVIEWER = {W. S. Massey},
+       DOI = {10.1007/BF02566923},
+       URL = {https://doi.org/10.1007/BF02566923},
+}
+
 @article {ThomasonWilson,
     AUTHOR = {Thomason, Robert W. and Wilson, W. Stephen},
      TITLE = {Hopf rings in the bar spectral sequence},
