--- a/cooperations.tex
+++ b/cooperations.tex
@@ -64,7 +64,7 @@ The \index{descent!object!unstable}\textit{unstable descent object} is the cosim
 \cdots
 \end{tikzcd}
 \right\}.\]
-Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{A reader seeking visual stimulation can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  In the case that \(\pi_0 \sheaf{UD}_E(S^0)\) is even, the simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad},\] and there is a preferred system of sheaves \(\omega^{n/2} = \Ucontext{E}(S^n)\).
+Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.  In the case that \(\pi_0 \sheaf{UD}_E(S^0)\) is even, the simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad},\] and there is a preferred system of sheaves \(\omega^{n/2} = \Ucontext{E}(S^n)\).
 \end{definition}
 
 The remainder of this Lecture will be spent trying to wrangle the information in \Cref{UASSDefinition}.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed in order from least to most difficult.
@@ -230,6 +230,19 @@ If \(E\) satisfies {\UGH} and \(X\) is a space with \(E_0 X = SN\) for some conn
 \begin{proof}
 Under {\UGH}, we have a factorization \[\CatOf{Coalgebras}_{G}(E_0, -) = \CatOf{Coalgebras}_{U}(E_0, P(-))\] and the injective objects intertwine to give a composite functor spectral sequence \[E_2^{r, s} = \Ext^r_{\CatOf{Coalgebras}_U}(E_0, R^s_{\CatOf{Coalgberas}_G} P(M)) \Rightarrow \Ext^{r+s}_{\CatOf{Coalgebras}_G}(E_0, M).\]  If \(M = E_0 X = SN\) for some connective free \(E_0\)--module \(N\), then \[R^{q > 0}_{\CatOf{Coalgebras}_G} P(E_0 X) = 0,\] hence the composite functor spectral sequence collapses, and \[\Ext^s_{\CatOf{Coalgebras}_U}(E_0, P E_0 X)\] computes the unstable Adams \(E_2\)--term as claimed.
 \end{proof}
+
+\afterrectopage{
+\begin{sidewaysfigure}
+\centering
+\input{uass7.tex}
+\caption{The \(E_2\)--page of the unstable \(\HFtwo\)--Adams spectral sequence for \(S^7\)~\cite{BPS}.  North and north-east lines denote multiplication by \(2\) and by \(\eta\).}\label{UASS7Figure}
+\end{sidewaysfigure}
+\begin{sidewaysfigure}
+\centering
+\input{uass9.tex}
+\caption{The \(E_2\)--page of the unstable \(\HFtwo\)--Adams spectral sequence for \(S^9\)~\cite{BPS}.  North and north-east lines denote multiplication by \(2\) and by \(\eta\).}\label{UASS9Figure}
+\end{sidewaysfigure}
+}
 
 \begin{remark}[{cf.\ \Cref{AutGaHasStableCoopns}}]
 As in the stable case, the Hopf ring associated to a ring spectrum satisfying {\UFH} splits off a factor of \(B\N\) that tracks the grading\index{group scheme!multiplicative group, \(\Gm\)!action}, and \(\omega^{*/2}\) can be thought of as a family of character sheaves for \(\N\).  Passing to the stable context covers the localization \(B\N \to B\Gm\).
