more kiran fixes

--- a/mo.tex
+++ b/mo.tex
@@ -344,7 +344,7 @@ A \index{grading|see {\(\Gm\) action}}\index{group scheme!multiplicative group, 
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.96]{StricklandFSFG}}]\label{GradedAndGmEquivAgree}
-A graded ring \(A\) is equivalent data to an affine scheme \(\Spec A\) with an \index{group scheme!multiplicative group, \(\Gm\)!action}action by \(\mathbb G_m\).  Additionally, a map \(A \to B\) respects the grading exactly when the induced map \(\Spec B \to \Spec B\) is \(\mathbb G_m\)--equivariant.
+A graded ring \(A\) is equivalent data to an affine scheme \(\Spec A\) with an \index{group scheme!multiplicative group, \(\Gm\)!action}action by \(\mathbb G_m\).  Additionally, a map \(A \to B\) respects the grading exactly when the induced map \(\Spec B \to \Spec A\) is \(\mathbb G_m\)--equivariant.
 \end{lemma}
 \begin{proof}
 A \(\mathbb G_m\)--action on \(\Spec A\) is equivalent data to a coaction map \[\alpha^*: A \to A \otimes \F_2[x^\pm].\]  Define \(A_k\) to be those points in \(a\) satisfying \(\alpha^*(a) = a \otimes x^k\).  It is clear that we have \(1 \in A_0\) and that \(A_j A_k \subseteq A_{j+k}\).  To see that \(A = \bigoplus_k A_k\), note that every tensor can be written as a sum of pure tensors.  Conversely, given a graded ring \(A\), define the coaction map on \(A_k\) by \[(a_k \in A_k) \mapsto x^k a_k\] and extend linearly.
@@ -676,7 +676,7 @@ Next, we consider the more computationally serious case of \(X = kO\), the conne
 \Susp^2 kU & \xrightarrow{\cdot \beta} kU \to H\Z, &
 H\Z & \xrightarrow{\cdot 2} H\Z \to \HFtwo.
 \end{align*}
-These combine to give a resolution of \(\HFtwo\) via an iterated cofiber of free \(kO\)--modules, with \index{Poincar\'e series}Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity \(kO \sm_{kO} \HFtwo \simeq \HFtwo\) gives a small presentation of the Hopf algebra \(\pi_* \HFtwo \sm_{kO} \HFtwo\): it is a commutative Hopf algebra over \(\F_2\) with the above Poincar\'e series.  The \index{Milnor--Moore}Borel--Milnor--Moore classification of commutative Hopf algebras over \(\F_2\)~\cite[Theorem 7.11]{MilnorMoore} shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for \(|a| = 1\), \(|b| = 2\), and \(|c| = 3\).  By knowing that the natural map \(\mathcal A \to \pi_* \HFtwo \sm_{kO} \HFtwo\) winds up inducing an isomorphism \(\pi_{* \le 2} \S \to \pi_{* \le 2} kO\), we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
+These combine to give a resolution of \(\HFtwo\) via an iterated cofiber of free \(kO\)--modules, with \index{Poincar\'e series}Poincar\'e series \[((1 + t^2) + t^3(1 + t^2)) + t((1 + t^2) + t^3(1 + t^2)) = 1 + t + t^2 + 2t^3 + t^4 + t^5 + t^6.\]  Repeatedly using the identity \(kO \sm_{kO} \HFtwo \simeq \HFtwo\) gives a small presentation of the Hopf algebra \(\pi_* \HFtwo \sm_{kO} \HFtwo\): it is a commutative Hopf algebra over \(\F_2\) with the above Poincar\'e series.  The \index{Milnor--Moore}Borel--Milnor--Moore classification of commutative Hopf algebras over \(\F_2\)~\cite[Theorem 7.11]{MilnorMoore} shows that the algebra structure is either \[\frac{\F_2[a, b, c]}{(a^2 = 0, b^2 = 0, c^2 = 0)} \quad \text{or} \quad \frac{\F_2[a, b, c]}{(a^2 = b, b^2 = 0, c^2 = 0)}\] for \(|a| = 1\), \(|b| = 2\), and \(|c| = 3\).  By knowing that the natural map \(\mathcal A_* \to \pi_* \HFtwo \sm_{kO} \HFtwo\) winds up inducing an isomorphism \(\pi_{* \le 2} \S \to \pi_{* \le 2} kO\), we conclude that we are in the latter case, which gives a presentation of the Hopf algebra as a whole:
 \begin{center}
 \begin{tikzcd}
 \pi_* \HFtwo \sm \HFtwo \arrow{r} \arrow[equal]{d} & \pi_* \HFtwo \sm_{kO} \HFtwo \arrow[equal]{d} \\
@@ -744,7 +744,7 @@ and we also have the equivalence induced by the topological map in \Cref{RPnThom
 We will use them both in turn.
 
 \begin{corollary}[{\cite[Section I.3]{AdamsBlueBook}, \cite[Proposition 6.2]{HopkinsCOCTALOS}}]\label{HF2MOisFree}
-There is again an isomorphism \[\HFtwo P_0(MO) \cong \frac{\Sym \HFtwo P_0 MO(1)}{b'_0 = 1}\] of rings and of comodules for the dual Steenrod algebra.
+There is again an isomorphism \[\HFtwo P_0(MO) \cong \frac{\Sym \HFtwo P_0 MO(1)}{\alpha'_0 = 1}\] of rings and of comodules for the dual Steenrod algebra.
 \end{corollary}
 \begin{proof}
 The block sum maps \[BO(n) \times BO(m) \to BO(n+m)\] Thomify to give compatible maps \[MO(n) \sm MO(m) \to MO(n+m).\]  Taking the colimit, this gives a ring structure on \(MO\) compatible with that on \(\Susp^\infty_+ BO\) and compatible with the Thom isomorphism.
@@ -803,7 +803,7 @@ Recall, again, that \(\InternalAut_1(\G_a)\) is defined by the (split) kernel se
 f_{\mathrm{typ}}(x) & = \sum_{k=0}^\infty b_{2^k-1} x^{2^k}, &
 f_{\mathrm{rest}}(x) & = \sum_{j \ne 2^k} b_{j-1} x^j.
 \end{align*}
-Because we assumed \(b_0 = 1\) and \(f_{\mathrm{typ}}\) is concentrated in power--of--\(2\) degrees, it follows that \(f_{\mathrm{typ}}\) gives a point \(f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)\).  We can use it to de-scale and get a new coordinate \[g(x) = f_{\mathrm{typ}}^{-1}(f(x)) = f_{\mathrm{typ}}^{-1}(f_{\mathrm{typ}}(x)) + f_{\mathrm{typ}}^{-1}(f_{\mathrm{rest}}(x)),\] which itself has an analogous decomposition into series \(g_{\mathrm{typ}}(x)\) and \(g_{\mathrm{rest}}(x)\).  Finally, note that \(g_{\mathrm{typ}}(x) = x\), since \(f_{\mathrm{typ}}^{-1}(f_{\mathrm{rest}}(x))\) cannot contribute to the power--of--\(2\) degrees in the composite, and that \(f_{\mathrm{typ}}\) is the unique point in \(\InternalAut_1(\G_a)(R)\) that has this property.  Altogether, this shows that the map \(f \mapsto (f_{\mathrm{typ}}, g_{\mathrm{rest}})\) is an isomorphism.
+Because we assumed \(b_0 = 1\) and \(f_{\mathrm{typ}}\) is concentrated in power--of--\(2\) degrees, it follows that \(f_{\mathrm{typ}}\) gives a point \(f_{\mathrm{typ}} \in \InternalAut_1(\G_a)(R)\).  We can use it to de-scale and get a new coordinate \[g(x) = f_{\mathrm{typ}}^{-1}(f(x)) = f_{\mathrm{typ}}^{-1}(f_{\mathrm{typ}}(x)) + f_{\mathrm{typ}}^{-1}(f_{\mathrm{rest}}(x)),\] which itself has an analogous decomposition into series \(g_{\mathrm{typ}}(x)\) and \(g_{\mathrm{rest}}(x)\).  Finally, note that \(g_{\mathrm{typ}}(x) = x\), since \(f_{\mathrm{typ}}^{-1}(f_{\mathrm{rest}}(x))\) cannot contribute to the power--of--\(2\) degrees in the composite, and that \(f_{\mathrm{typ}}\) is the unique point in \(\InternalAut_1(\G_a)(R)\) that has this property.  Altogether, this shows that the map \(f \mapsto (g_{\mathrm{rest}}, f_{\mathrm{typ}})\) is an isomorphism.
 \end{proof}
 
 \begin{corollary}[{\cite[Remark 12.3]{StricklandFGNotes}}]\label{CalculationOfPiStarMO}
